fixd bug movment

--- a/index.html
+++ b/index.html
@@ -19,10 +19,9 @@
 
 <body onkeydown="move(event);" onkeyup="ak_lr = 3;">
 <img src="img/background.png" id="back_img">
-<img src="img/turtrl_raw/turtel_raw_1.png" style="position:absolute;left:50px;top:340px;">
+<img src="img/turtrl_raw/turtel_raw_1.png" style="position:absolute;left:50px;top:340px;" id="turtel">
 <img src="img/haag.png" id="haag">
 </body>
 
 <script src="main.js" type="text/javascript"></script>
-
 </html>
