--- a/index.html
+++ b/index.html
@@ -3,25 +3,99 @@
 <head>
 <meta charset="utf-8">
 <title>Untitled Document</title>
-<style>
-#back_img {
-	position:absolute;
-	left:0px;
-	top:0px;
-}
-#haag {
-	position: absolute;
-	left: 370px;
-	top: 250px;
-}
-</style>
+<div id=pubnub pub-key=demo sub-key=demo></div>
+<script src=http://cdn.pubnub.com/pubnub-3.1.min.js></script>
 </head>
 
-<body onkeydown="move(event);" onkeyup="ak_lr = 3;">
-<img src="img/background.png" id="back_img">
-<img src="img/turtrl_raw/turtel_raw_1.png" style="position:absolute;left:50px;top:340px;" id="turtel">
-<img src="img/haag.png" id="haag">
+<body>
+<div id="log"></div>
 </body>
 
-<script src="main.js" type="text/javascript"></script>
+<script>
+var last_send;
+var last_ont;
+var data = new Array();
+var channel = "chat";
+
+PUBNUB.subscribe({
+channel : channel,
+callback : function(text) { if ((''+text).replace( /[<>]/g, '' ) != last_send) {ont((''+text).replace( /[<>]/g, '' ));} }
+});
+
+
+function send(mes) {
+	PUBNUB.publish({
+channel : channel, message : mes
+});
+last_send = mes;
+}
+
+
+function ont(text) {
+	var b = 0;
+	last_ont = text.split("|");
+	redraw();
+}
+
+
+function redraw() {
+	var temp = '<table width="160" height="90" border="1"><tr><th>nickname</th><th>' + last_ont[0] + '</th></tr><tr><td> game</td><td>' + last_ont[1] + '</tr></table>';
+	document.getElementById("log").innerHTML = temp;	
+}
+</script>
+
+
+<script>
+function getCookie(c_name)
+{
+var c_value = document.cookie;
+var c_start = c_value.indexOf(" " + c_name + "=");
+if (c_start == -1)
+  {
+  c_start = c_value.indexOf(c_name + "=");
+  }
+if (c_start == -1)
+  {
+  c_value = null;
+  }
+else
+  {
+  c_start = c_value.indexOf("=", c_start) + 1;
+  var c_end = c_value.indexOf(";", c_start);
+  if (c_end == -1)
+    {
+    c_end = c_value.length;
+    }
+  c_value = unescape(c_value.substring(c_start,c_end));
+  }
+return c_value;
+}
+
+function setCookie(c_name,value,exdays)
+{
+var exdate=new Date();
+exdate.setDate(exdate.getDate() + exdays);
+var c_value=escape(value) + ((exdays==null) ? "" : "; expires="+exdate.toUTCString());
+document.cookie=c_name + "=" + c_value;
+}
+
+var Users = [];
+add_user=function() {
+	var id=getCookie("ids");
+	if (id!=null && id!="") {
+		this.id = parseInt(id) + 1;
+	} else {
+		this.id = 0;
+	}
+	this.nick = prompt("nick","");
+	this.pass = prompt("pass","");
+	this.op = prompt("op : fales or true","false");
+	Users.push(this);
+	
+	setCookie("user_nick_" + this.id,this.nick,99999);
+	setCookie("user_pass_" + this.id,this.pass,99999);
+	setCookie("user_op_" + this.id,this.op,99999);
+	setCookie("ids",this.id,99999);
+}
+</script>
 </html>
