--- a/user.html
+++ b/user.html
@@ -60,10 +60,7 @@ function decode_cookie(o_cookie) {
 	for (var i = 0;i< s_cookie_leng;i++) {
 		var c_cookie = s_cookie[i].split("|");
 		new add_user(c_cookie[1],c_cookie[2],c_cookie[3]);
-	}
-	
-	for (var i = 0;i < Users.length;i++) {
-		alert(Users[i].nick + "," + Users[i].pass + "," + Users[i].op);
+		alert(c_cookie[1] + "," + c_cookie[2] + "," + c_cookie[3]);
 	}
 }
 
