--- a/user.html
+++ b/user.html
@@ -57,7 +57,7 @@ function decode_cookie(o_cookie) {
 	var s_cookie = o_cookie.split("#");
 	var s_cookie_leng =  s_cookie.length;
 	
-	for (var i = 0;i > s_cookie_leng;i++) {
+	for (var i = 0;i < s_cookie_leng;i++) {
 		var c_cookie = s_cookie[i].split("|");
 		new add_user(c_cookie[1],c_cookie[2],c_cookie[3]);
 		alert(c_cookie[1] + "," + c_cookie[2] + "," + c_cookie[3]);
@@ -66,7 +66,7 @@ function decode_cookie(o_cookie) {
 
 function code_cookie() {
 	var temp = "";
-	for (var i = 0;i > Users.length;i++) {
+	for (var i = 0;i < Users.length;i++) {
 		alert(Users[i].nick + "," + Users[i].pass + "," + Users[i].op);
 		temp += Users[i].nick + "|" + Users[i].pass + "|" + Users[i].op + "#";
 	}
