--- a/user.html
+++ b/user.html
@@ -80,7 +80,7 @@ function code_cookie() {
 function log_users() {
 	var temp = "";
 	for (i in Users) {
-	temp += "<table border='1'><tr><td>nick</td><td>"+Users[i].nick+"</td></tr><tr><td>pass</td><td>"+Users[i].pass+"</td></tr><tr><td>op</td><td>"+Users[i].op+"</td></tr></table>";
+	temp += "<table border='1' align='left'><tr><td>nick</td><td>"+Users[i].nick+"</td></tr><tr><td>pass</td><td>"+Users[i].pass+"</td></tr><tr><td>op</td><td>"+Users[i].op+"</td></tr></table>";
 	}
 	document.getElementById("log").innerHTML = temp;
 }
