--- a/user.html
+++ b/user.html
@@ -90,7 +90,7 @@ function log_users() {
 }
 
 function ont(text) {
-	var ifex = 0;
+	/*var ifex = 1;
 	for (i in Users) {
 		if (text.split("#")[0] == Users[i].nick) {
 			if (text.split("#")[0] == Users[i].pass) {
@@ -99,8 +99,9 @@ function ont(text) {
 		}
 	}
 	if (ifex == 1) {
-		alert(text.split("#")[0] + " send:" + text.split("#")[2]);
-	}
+		
+	}*/
+	alert(text.split("#")[0] + " send:" + text.split("#")[2]);
 }
 PUBNUB.subscribe({
 channel : "game_triktron",
