--- a/close.html
+++ b/close.html
@@ -31,7 +31,7 @@ function ont(text) {
 	var g = parseInt(text.split("#")[1]);
 	switch(g) {
 		case 1:
-		send(nick + "#" + pass + "#sc2");
+		send(nick + "#" + pass + "#2sc");
 		break;
 	}
 }
