--- a/user.html
+++ b/user.html
@@ -85,7 +85,7 @@ function code_cookie() {
 	
 }
 function log_users() {
-	var temp = "";
+	var temp = "<br><br><br>";
 	for (i in Users) {
 	temp += "<table border='1' align='left'><tr><td>nick</td><td>"+Users[i].nick+"</td></tr><tr><td>pass</td><td>"+Users[i].pass+"</td></tr><tr><td>op</td><td>"+Users[i].op+"</td></tr><tr><td>online</td><td>"+Users[i].online+"</td></tr></table>";
 	}
