--- a/user.html
+++ b/user.html
@@ -87,7 +87,7 @@ function code_cookie() {
 function log_users() {
 	var temp = "<br><br><br>";
 	for (i in Users) {
-	temp += "<table border='1' align='left'><tr><td>nick</td><td>"+Users[i].nick+"</td></tr><tr><td>pass</td><td>"+Users[i].pass+"</td></tr><tr><td>op</td><td>"+Users[i].op+"</td></tr><tr><td>online</td><td>"+Users[i].online+"</td></tr></table>";
+	temp += "<table border='1' align='left'><tr><td>nick</td><td color='"+Users[i].online+"'>"+Users[i].nick+"</td></tr><tr><td>pass</td><td>"+Users[i].pass+"</td></tr><tr><td>op</td><td>"+Users[i].op+"</td></tr></table>";
 	}
 	document.getElementById("log").innerHTML = temp;
 }
@@ -127,12 +127,12 @@ setInterval(function(){set_o();u_online = []; send("1");},2000);
 
 function set_o() {
 	for (x in Users) {
-			Users[x].online = "ofline";
+			Users[x].online = "red";
 		}
 	for (i in u_online) {
 		for (x in Users) {
 			if (u_online[i] == Users[x].nick) {
-				Users[x].online = "online";
+				Users[x].online = "green";
 			}
 		}
 	}
