--- a/user.html
+++ b/user.html
@@ -87,7 +87,7 @@ function code_cookie() {
 function log_users() {
 	var temp = "<br><br><br>";
 	for (i in Users) {
-	temp += "<table border='1' align='left'><tr><td>nick</td><td color='"+Users[i].online+"'>"+Users[i].nick+"</td></tr><tr><td>pass</td><td>"+Users[i].pass+"</td></tr><tr><td>op</td><td>"+Users[i].op+"</td></tr></table>";
+	temp += "<table border='1' align='left'><tr><td>nick</td><font color='"+Users[i].online+"'><td>"+Users[i].nick+"</td></font></tr><tr><td>pass</td><td>"+Users[i].pass+"</td></tr><tr><td>op</td><td>"+Users[i].op+"</td></tr></table>";
 	}
 	document.getElementById("log").innerHTML = temp;
 }
