--- a/user.html
+++ b/user.html
@@ -56,7 +56,7 @@ add_user=function(nick,pass,op) {
 	this.nick = nick;
 	this.pass = pass;
 	this.op = op;
-	this.online = "ofline";
+	this.online = "red";
 	Users.push(this);
 }
 
